# xhs-planting-agent

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  main.py  pyproject.toml  requirements-hf.txt  requirements.txt  setup_project.py
config/: settings.py
data/: bm25_index.pkl  memory.db
data/eval/: eval_set.json  llm_eval_set.json
data/processed/: chunks.json  notes.json
data/raw/: search_comments_2026-05-17.json  search_contents_2026-05-17.json
evaluation/: eval_set_generator.py  evaluator.py  ragas_eval.py  retrieval_eval.py
evaluation/reports/: ablation_report.json  full_eval_report.json  real_data_report.json  real_eval_report.json
frontend/: app.py
frontend/web/: index.html
logs/: trace_91450c819c60.json  trace_c9feadabd900.json
scripts/: build_index.py  crawl_data.py  demo_evaluation.py  demo_harness.py  demo_hybrid_retrieval.py  demo_memory.py  demo_workflow.py  generate_eval_set.py  run_evaluation.py  test_chroma.py
src/agents/: ad_detector.py  query_planner.py  recommender.py  retrieval_agent.py
src/api/: main.py  multimodal.py  schemas.py
src/data/: chunker.py  cleaner.py  crawler.py
src/graph/: state.py  workflow.py
src/harness/: __init__.py  base.py  budget.py  tool_registry.py  tracer.py
src/ingestion/: __init__.py  pipeline.py
src/mcp_server/: server.py
src/mcp_server/tools/: __init__.py  search_notes.py
src/memory/: long_term.py  memory_writer.py  short_term.py
src/retrieval/: bm25_retriever.py  chroma_store.py  dense_retriever.py  hybrid_retriever.py  milvus_store.py  reranker.py  trace.py
tests/: test_harness.py  test_memory.py  test_retrieval.py
(+3 files in other folders)
