[project]
name = "xhs-planting-agent"
version = "0.1.0"
description = "Xiaohongshu planting decision agent with hybrid RAG and multi-agent harness"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Agent 编排
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "crewai>=0.70.0",
    # LLM
    "openai>=1.40.0",           # DashScope 用 OpenAI 兼容接口
    "dashscope>=1.20.0",
    # RAG
    "llama-index>=0.11.0",
    "llama-index-vector-stores-milvus>=0.2.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    # 向量库
    "pymilvus[milvus-lite]>=2.4.0",          # Milvus Lite 包含其中
    # 检索 / 重排序
    "rank-bm25>=0.2.2",
    "flagembedding>=1.2.10",    # bge-reranker-v2-m3
    "sentence-transformers>=3.0.0",
    # 数据
    "pandas>=2.0.0",
    "playwright>=1.40.0",       # MediaCrawler 依赖
    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    # 记忆 / 存储
    "sqlmodel>=0.0.20",          # SQLite ORM
    # 可观测性
    "langfuse>=2.50.0",
    "loguru>=0.7.0",
    # 评估
    "ragas>=0.2.0",
    "datasets>=2.20.0",
    # 工具
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",           # 重试库（harness 会用）
    "onnxruntime<1.20",
    "jieba>=0.42.1",
    "milvus-lite>=3.0",
    "transformers==4.44.0",
    "peft>=0.19.1",
    "mcp>=1.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ipykernel>=6.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

frontend = [
    "streamlit>=1.38.0",
    "plotly>=5.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
